--- a/assets/css/estilo.css
+++ b/assets/css/estilo.css
@@ -10,6 +10,7 @@ main{
 }
 
 .container {
+    /* Barreira */
     color:rgb(255, 255, 255);
     width: 580px;
     margin: 0 auto;
@@ -18,7 +19,10 @@ main{
     font-family: Arial, Helvetica, sans-serif;
 
 }
+
+
 .titulo{
+    /*quadrado azul e a escrita*/
     width: 100%;
     height: 8.4vh;
     float: left;
@@ -29,16 +33,18 @@ main{
     font-family: Arial, Helvetica, sans-serif;
 }
 #titulo{
+    /* OQ define a possicao do azul */
 display: flex;
 text-align: left;
 }
 #img{
-
+/* possicao da imagem */
     display: flex;
     justify-content: center;
 
 }
 img{
+    /* oq faz a imagem muda de tamanho */
 width: 50%;
 height: auto;
 margin-top: 140px;
@@ -46,6 +52,7 @@ margin-bottom: 30px;
 }
 
 #login{
+    /* oq posicao do formulario */
     width: 100%;
     height: auto;
     padding: 4%;
@@ -55,6 +62,7 @@ margin-bottom: 30px;
 
 
 .formulario{
+    /* oq meche dentro do formulario */
     width: 100%;
     height: 8.8vh;
     border: 2px solid;
@@ -68,19 +76,38 @@ margin-bottom: 30px;
 
 }
 .formulario:focus{
+    /* escrita dentro do formulario */
     background: #ececec;
     color: #b9b8b8;
 }
 .formulario::placeholder{
+    /* passa o mouse por cima */
     color: #969696;
     font-size: 0.8em;
 }
 #email{
+    /* tamanho do email */
     margin-bottom: 20px;
 
 }
+#recuperar-senha{
+    /* aparencia do recuperar senha */
+    text-align: center;
+    color: #354b5e;
+    margin: 20px;
+    font-size: 1.3em;
+    display: flex;
+    justify-content: center;
+    cursor: pointer;
+}
+#botao-login{
+    /* posicao do botao login */
+    display: flex;
+    justify-content: center;
 
+}
 .botao-login{
+    /* aparencia do botao login */
     width: 66%;
     margin-bottom: 20px;
     height: 7.9vh;
@@ -91,27 +118,18 @@ margin-bottom: 30px;
     color: #ffffff;
     cursor: pointer;
 }
-#recuperar-senha{
-    text-align: center;
-    color: #2296f3;
-    margin: 20px;
-    font-size: 1.3em;
-    display: flex;
-    justify-content: center;
-    cursor: pointer;
-}
 
-#botao-login{
-    display: flex;
-    justify-content: center;
 
-}
+
+
 #botao-create{
+    /* botao criar conta */
     display: flex;
     justify-content: center;
     
 }
 .botao-create{
+    /* aparencia do criar conta */
     text-align: center;
     color: #414141;
     margin: 20px;
@@ -128,8 +146,9 @@ margin-bottom: 30px;
 
 }
 @media (max-width: 700px){
-
+/* pra celular */
     .container {
+        /* tamanho da tela pra celualr */
         color:rgb(255, 255, 255);
         width: 310px;
         margin: 0 auto;
