--- a/assets/css/estilo.css
+++ b/assets/css/estilo.css
@@ -150,12 +150,19 @@ margin-bottom: 30px;
     .container {
         /* tamanho da tela pra celualr */
         color:rgb(255, 255, 255);
-        width: 310px;
+        width: 370px;
         margin: 0 auto;
         display: flex;
         flex-direction: column;
         font-family: Arial, Helvetica, sans-serif;
     
     }
+img{
+    /* tamanho img celular  */
+width: 60%;
+height: auto;
+margin-top: 140px;
+margin-bottom: 30px;
+}
 
 }
