--- a/assets/css/estilo.css
+++ b/assets/css/estilo.css
@@ -72,17 +72,16 @@ margin-bottom: 30px;
     outline: none;
     font-size: 1.7em;
     padding: 5px;
-    border-color: #b9b8b8;;
-
+    border-color: #354b5e;
 }
 .formulario:focus{
     /* escrita dentro do formulario */
     background: #ececec;
-    color: #b9b8b8;
+    color: #354b5e;
 }
 .formulario::placeholder{
     /* passa o mouse por cima */
-    color: #969696;
+    color: #354b5e;
     font-size: 0.8em;
 }
 #email{
@@ -150,19 +149,12 @@ margin-bottom: 30px;
     .container {
         /* tamanho da tela pra celualr */
         color:rgb(255, 255, 255);
-        width: 370px;
+        width: 310px;
         margin: 0 auto;
         display: flex;
         flex-direction: column;
         font-family: Arial, Helvetica, sans-serif;
     
     }
-img{
-    /* tamanho img celular  */
-width: 60%;
-height: auto;
-margin-top: 140px;
-margin-bottom: 30px;
-}
 
 }
